Fix regression: Switcher icon on mobile

--- a/asset/sass/_mobile.scss
+++ b/asset/sass/_mobile.scss
@@ -80,6 +80,14 @@ h4 {
     font-size: $mobile-font-size;
 }
 
+#switcher-toggle {
+    background-size: 1rem;
+}
+
+.language-switcher + nav > .menu-toggle {
+    margin-left: 0;
+}
+
 
 /* @end */
 
